--- a/blocks/photo-grid.css
+++ b/blocks/photo-grid.css
@@ -10,7 +10,7 @@
 }
 @media screen and (max-width: 768px) {
   .photo-grid {
-    grid-template-columns: repeat(2, 352px);
+    grid-template-columns: repeat(2, auto);
     margin: 0 24px 0 24px;
     padding: 0 0 89px 0;
     max-width: 720px;
