--- a/blocks/place.css
+++ b/blocks/place.css
@@ -1,13 +1,12 @@
 .place {
   display: grid;
   grid-template-columns: 460px 1fr;
-  grid-template-rows: auto;
+  grid-template-rows: auto auto 1fr;
   grid-template-areas:
     "title artist "
     "image paragraph"
     "button paragraph "
     ". paragraph";
-
   column-gap: 4%;
 }
 
@@ -24,7 +23,7 @@
   color: #ffffff;
 }
 .place__image {
-  max-width: 460px;
+  width: 460px;
   height: 460px;
   grid-area: image;
 }
@@ -56,9 +55,8 @@
   line-height: 1.22;
   color: #ffffff;
 }
-.place__paragraph {
+.place__content {
   display: flex;
-  box-sizing: border-box;
   flex-direction: column;
   font-family: "Inter", sans-serif;
   font-style: normal;
@@ -68,9 +66,11 @@
   /* or 29px */
   color: #ffffff;
   grid-area: paragraph;
+  max-width: 484px;
+}
+.place__paragraph {
   margin: 0 0 25px 0;
 }
-
 .place__paragraph:last-child {
   margin-bottom: 0;
 }
@@ -78,20 +78,23 @@
 @media screen and (max-width: 768px) {
   .place {
     max-width: 720px;
-    grid-template-columns: 1fr 352px;
+    grid-template-columns: 1fr 1fr;
     column-gap: 28px;
   }
   .place__image {
-    width: 340px;
-    height: 340px;
+    max-width: 44.5vw;
+    max-height: 45vh;
   }
   .place__title {
-    font-size: 42px;
-    width: 340px;
+    font-size: 7vw;
+    max-width: 340px;
   }
-  .place__paragraph {
-    font-size: 16px;
+  .place__content {
+    font-size: 2vw;
     max-width: 100%;
+  }
+  .place__artist {
+    font-size: 2.5vw;
   }
 }
 @media screen and (max-width: 320px) {
@@ -115,19 +118,19 @@
   .place__website {
     order: 0;
     align-self: flex-start;
-    margin-left: 16px;
+    margin: 0 0 0 16px;
   }
   .place__image {
     order: 1;
     max-width: 320px;
   }
-  .place__paragraph {
+  .place__content {
     order: 2;
     margin: 0 16px;
     font-size: 16px;
     max-width: 288px;
   }
   .place__artist {
-    width: 288px;
+    font-size: 18px;
   }
 }
